--- a/weather_UI_FINAL/pubspec.yaml
+++ b/weather_UI_FINAL/pubspec.yaml
@@ -29,10 +29,11 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  auto_size_text: ^3.0.0
   autocomplete_textfield: ^2.0.1
   bloc: ^8.1.2
   cupertino_icons: ^1.0.2
-
+  draggable_fab: ^0.1.4
   equatable: ^2.0.5
   flutter:
     sdk: flutter
